--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,3 +23,4 @@ jobs:
         npm run start --if-present
       env:
         CI: true
+        BOT_TOKEN: 1002046907:AAHvjYyV6NOI293XHID7NsyC9IaDKA0jqA4
